# py_omop2neo4j_lpg

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  BRD.md  Dockerfile  FRD.md  LICENSE.md  NOTICE  README.md  TERMS.md  VIGNETTE.md  comparison_document.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  python-test.yml
docs/: CI_CD_STRATEGY.md
scripts/: load_omop_vocab.py
src/py_omop2neo4j_lpg/: __init__.py  cli.py  config.py  extraction.py  loading.py  transformation.py  utils.py  validation.py
tests/: conftest.py  test_additional_edge_cases.py  test_cli.py  test_coverage.py  test_edge_cases.py  test_integration.py  test_loading.py  test_queries.py  test_rare_os_cases.py  test_robustness.py  test_transformation.py  test_utils.py  test_validation.py
tests/sample_data/: init.sql
