[project]
name = "py_omop2neo4j_lpg"
version = "0.2.0"
description = "A Python package to orchestrate the migration of OMOP vocabulary tables from PostgreSQL to a Labeled Property Graph (LPG) in Neo4j."
authors = [
  { name="Gowtham Adamane Rao", email="rao@ohdsi.org" },
]
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
]
dependencies = [
    "neo4j",
    "pandas",
    "numpy",
    "click",
    "pydantic-settings",
    "python-dotenv",
]
requires-python = ">=3.11.0"

[project.scripts]
py_omop2neo4j_lpg = "py_omop2neo4j_lpg.cli:cli"

[project.urls]
Homepage = "https://github.com/gowthamrao/py_omop2neo4j_lpg"
Repository = "https://github.com/gowthamrao/py_omop2neo4j_lpg"

[tool.poetry]
packages = [{include = "py_omop2neo4j_lpg", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "*"
psycopg2-binary = "*"
pytest-docker = "*"
pytest-dotenv = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require docker)",
]
env_files = [
    ".env.test"
]
